--- a/pom.xml
+++ b/pom.xml
@@ -538,7 +538,7 @@
         
         <!--<siddhi.version>3.</siddhi.version>-->
         <cep.version>4.0.0-SNAPSHOT</cep.version>
-        <carbon.event-processing.version>2.0.2-SNAPSHOT</carbon.event-processing.version>
+        <carbon.event-processing.version>2.0.2</carbon.event-processing.version>
 
         <!-- Carbon kernel version-->
         <carbon.kernel.version>4.3.0</carbon.kernel.version>
@@ -548,7 +548,7 @@
 
         <!--WSO2 versions-->
         <stratos.ui.version>2.2.0</stratos.ui.version>
-        <rampart.wso2.version>1.6.1-wso2v13</rampart.wso2.version>
+        <rampart.wso2.version>1.6.1-wso2v14</rampart.wso2.version>
         <axis2.version>1.6.1.wso2v11</axis2.version>
         <orbit.version.axiom>1.2.11.wso2v5</orbit.version.axiom>
         <version.commons.logging>1.1</version.commons.logging>
