--- a/modules/features/product/org.wso2.cep.styles.feature/pom.xml
+++ b/modules/features/product/org.wso2.cep.styles.feature/pom.xml
@@ -17,19 +17,17 @@
 ~ under the License.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>wso2cep-features</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>4.0.0-M0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>org.wso2.cep.styles.feature</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>4.0.0-M0</version>
     <packaging>pom</packaging>
     <name>WSO2 CEP - Styles Features</name>
     <url>http://wso2.org</url>
