--- a/modules/features/service/org.wso2.stratos.cep.dashboard.ui.feature/pom.xml
+++ b/modules/features/service/org.wso2.stratos.cep.dashboard.ui.feature/pom.xml
@@ -15,14 +15,12 @@
 ~ specific language governing permissions and limitations
 ~ under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>wso2stratos-cep-features</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>4.0.0-M0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
