--- a/modules/org.wso2.stratos.cep.login.ui/pom.xml
+++ b/modules/org.wso2.stratos.cep.login.ui/pom.xml
@@ -16,19 +16,17 @@
 ~ specific language governing permissions and limitations
 ~ under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <groupId>org.wso2.cep</groupId>
     	<artifactId>wso2cep-parent</artifactId>
-    	<version>4.0.0-SNAPSHOT</version>
+    	<version>4.0.0-M0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>org.wso2.stratos.cep.login.ui</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>4.0.0-M0</version>
     <packaging>bundle</packaging>
     <name>WSO2 Stratos CEP - Login User Interface</name>
 
