--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>wso2cep-parent</artifactId>
-        <version>4.0.0-M0</version>
+        <version>4.0.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -207,7 +207,7 @@
                                 <!--<copy file="repository/resources/shindig/index.jsp"-->
                                       <!--todir="target/shindig" />-->
 
-                                <!--<zip destfile="target/ROOT.war" basedir="target/shindig"   />-->
+                                <!--<zip destfile="target/ROOT.war" basedir="target/shindig" />-->
 
 
                                 <!-- Sign all the jars in the distribution -->
