--- a/modules/features/product/pom.xml
+++ b/modules/features/product/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
     	<artifactId>wso2cep-features-parent</artifactId>
-        <version>4.0.0-M0</version>
+        <version>4.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
