--- a/modules/samples/pom.xml
+++ b/modules/samples/pom.xml
@@ -21,12 +21,12 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
     	<artifactId>wso2cep-parent</artifactId>
-    	<version>4.0.0-M0</version>
+    	<version>4.0.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>cep-samples-parent</artifactId>
-    <version>4.0.0-M0</version>
+    <version>4.0.0-SNAPSHOT</version>
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
