--- a/modules/samples/producers/pizza-shop/pom.xml
+++ b/modules/samples/producers/pizza-shop/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>cep-samples-producers</artifactId>
-        <version>4.0.0-M0</version>
+        <version>4.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>pizza-shop-client</artifactId>
