--- a/modules/styles/service/pom.xml
+++ b/modules/styles/service/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
     	<artifactId>cep-styles-parent</artifactId>
-        <version>4.0.0-M0</version>
+        <version>4.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
