--- a/modules/samples/producers/pom.xml
+++ b/modules/samples/producers/pom.xml
@@ -49,6 +49,7 @@
         <module>foo-data</module>
         <module>sensor-stats</module>
         <module>analytics-stats</module>
+        <module>stock-quote-wso2-event</module>
     </modules>
 
 </project>
