--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <packaging>pom</packaging>
     <version>4.0.0-SNAPSHOT</version>
     <name>WSO2 CEP - Parent</name>
-    <url>http://wso2.org/projects/cep/java</url>
+    <url>http://wso2.com/products/complex-event-processor/</url>
     <description>WSO2 Complex Event Processor</description>
 
     <licenses>
