--- a/modules/org.wso2.stratos.cep.login.ui/pom.xml
+++ b/modules/org.wso2.stratos.cep.login.ui/pom.xml
@@ -20,13 +20,13 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
     	<artifactId>wso2cep-parent</artifactId>
-    	<version>4.0.0-SNAPSHOT</version>
+    	<version>4.0.0-M2</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>org.wso2.stratos.cep.login.ui</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>4.0.0-M2</version>
     <packaging>bundle</packaging>
     <name>WSO2 Stratos CEP - Login User Interface</name>
 
