--- a/modules/samples/producers/stock-quote-wso2-event/pom.xml
+++ b/modules/samples/producers/stock-quote-wso2-event/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>cep-samples-producers</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>4.0.0-M2</version>
     </parent>
 
     <artifactId>atock-quote-wso2-event-client</artifactId>
