--- a/modules/features/service/org.wso2.stratos.cep.styles.feature/pom.xml
+++ b/modules/features/service/org.wso2.stratos.cep.styles.feature/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
     	<artifactId>wso2stratos-cep-features</artifactId>
-        <version>4.0.0-M2</version>
+        <version>4.0.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
