--- a/modules/samples/consumers/dashboard-service/pom.xml
+++ b/modules/samples/consumers/dashboard-service/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>cep-samples-consumers</artifactId>
-        <version>4.0.0-M2</version>
+        <version>4.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>dashboard-service</artifactId>
