--- a/modules/samples/consumers/pom.xml
+++ b/modules/samples/consumers/pom.xml
@@ -21,12 +21,12 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>cep-samples-parent</artifactId>
-        <version>4.0.0-M2</version>
+        <version>4.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>cep-samples-consumers</artifactId>
     <name>WSO2 CEP - Sample Consumers</name>
-    <version>4.0.0-M2</version>
+    <version>4.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
 
