--- a/modules/integration/tests-ui-integration/tests-ui/pom.xml
+++ b/modules/integration/tests-ui-integration/tests-ui/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>integration-cep</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>4.0.0-M2</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
