Adding org.wso2.carbon.event.publisher.stub to product-cep pom. This is required for integration/tests-common/admin-clients

--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
             </dependency>
             <dependency>
                 <groupId>org.wso2.carbon.event-processing</groupId>
-                <artifactId>org.wso2.carbon.event.publihser.stub</artifactId>
+                <artifactId>org.wso2.carbon.event.publisher.stub</artifactId>
                 <version>${carbon.event-processing.version}</version>
             </dependency>
             <dependency>
